@@ -255,7 +255,6 @@ unix {
 	DEFINES += DATA_PATH=$(DATA_PATH)
 	DEFINES += DOC_PATH=$(DOC_PATH)
 	DEFINES += TRANSLATION_PATH=$(TRANSLATION_PATH)
-	DEFINES += CONF_PATH=$(CONF_PATH)
 	DEFINES += THEMES_PATH=$(THEMES_PATH)
 	DEFINES += SHORTCUTS_PATH=$(SHORTCUTS_PATH)
 	#DEFINES += NO_DEBUG_ON_CONSOLE
